--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "density-exchange-webpage",
+  "name": "density_exchange_reactjs",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,15 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "next": "13.5.6"
-  },
-  "devDependencies": {
-    "autoprefixer": "^10",
-    "postcss": "^8",
-    "tailwindcss": "^3",
-    "eslint": "^8",
-    "eslint-config-next": "13.5.6"
+    "@chakra-ui/icons": "^2.1.0",
+    "@chakra-ui/react": "^2.8.0",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "eslint": "8.47.0",
+    "eslint-config-next": "13.4.18",
+    "framer-motion": "^10.16.0",
+    "next": "13.4.18",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-icons": "^4.10.1",
+    "react-router-dom": "^6.15.0",
+    "react-spring": "^9.7.2",
+    "react-visibility-sensor": "^5.1.1",
+    "swiper": "^10.2.0"
   }
 }
